<resources>
    <string name="app_name">My Weather</string>
    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="enable_gps" translatable="false">Enable Gps</string>
    <string name="required_for_this_app" translatable="false">required for this app</string>
    <string name="enable_now">enable now</string>
    <string name="windspeed">Wind Speed :</string>
    <string name="pressure">Pressure :</string>
    <string name="clouds">Clouds : </string>
    <string name="feelslike">feels like:</string>
    <string name="humidity">Humidity :</string>
    <string name="kmh">km/H</string>
    <string name="mileh">mile/H</string>
    <string name="settings">Settings</string>
    <string name="weatherloc">Weather Location</string>
    <string name="deviceloc">Use device Location</string>
    <string name="userloc">Location</string>
    <string name="allowtheapp">Allow the app to get your location</string>
    <string name="maploc">The location for which the weather is displayed</string>
    <string name="weatheralert">Weather Alert</string>
    <string name="allowalert">Allow the app to notify you about the weather alerts</string>
    <string name="alarmsound">Alarm Sound</string>
    <string name="choosealarm">choose whether the alarm is silent or not</string>
    <string name="prefre">Prefrences</string>
    <string name="unitsys">Unit System</string>
    <string name="lang">Language</string>
    <string name="today">Today</string>
    <string name="favs">Favs</string>
    <string name="alerts">Alerts</string>
    <string name="citydelete">Are you sure you want to delete this city ?</string>
    <string name="alarmdelete">Are you sure you want to delete this alarm ?</string>


    <string name="arabic" translatable="false">العربية</string>
    <string name="alert">Alert</string>
    <string name="nodangerous">No Dangerous Alerts for now.</string>


</resources>